Style fix for tracks on small screens

--- a/src/components/screens/playground/track/index.css
+++ b/src/components/screens/playground/track/index.css
@@ -125,7 +125,7 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .track-label-large {
     display: inherit;
   }
@@ -134,7 +134,7 @@
   }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1199px) {
   .track-label-large {
     display: none;
   }
